Fix menu button overlaps in narrow screen

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -27,6 +27,6 @@ body {
 }
 
 .my-player {
-    margin: 0 auto;
+    margin: 48px auto;
     width: 320px;
 }
